# storage/api-docs/api-docs.json
@@ -343,7 +343,7 @@
                 "tags": [
                     "Category"
                 ],
-                "summary": "delete the Category by Category ID",
+                "summary": "delete a category by Category ID",
                 "description": "Return the Category infomation",
                 "operationId": "categories.destroy",
                 "parameters": [
@@ -563,7 +563,7 @@
                     {
                         "name": "peerGroup",
                         "in": "path",
-                        "description": "get peerGroup information by ID",
+                        "description": "delete a peerGroup by ID",
                         "required": true,
                         "schema": {
                             "type": "integer",
@@ -574,6 +574,452 @@
                 "responses": {
                     "200": {
                         "description": "User not exsits! / Success, User is detached from peer group / Error, User does not exsit in peer group"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/api/peer-groups/{peerGroup_id}/surveys/{survey_id}/ratings": {
+            "get": {
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "get the rating by peerGroup id and survey id",
+                "description": "Returns the rating infomation",
+                "operationId": "ratings.index",
+                "parameters": [
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User not exsits! / Success, User is detached from peer group / Error, User does not exsit in peer group"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "create a rating",
+                "description": "create a new rating by accepting rating content, return the new rating information",
+                "operationId": "ratings.store",
+                "parameters": [
+                    {
+                        "name": "recipient_id",
+                        "in": "path",
+                        "description": "recipient ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "category_id",
+                        "in": "path",
+                        "description": "category ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "rating",
+                        "in": "path",
+                        "description": "rating content",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/api/peer-groups/{peerGroup_id}/surveys/{survey_id}/ratings/{rating_id}": {
+            "get": {
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "create a rating",
+                "description": "(Not Confirm) Returns the rating infomation by rating id, survey id and peerGroup id",
+                "operationId": "ratings.show",
+                "parameters": [
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "rating_id",
+                        "in": "path",
+                        "description": "This is the rating ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "update a rating",
+                "description": "Update the rating infomation by rating id, survey id and peerGroup id",
+                "operationId": "ratings.update",
+                "parameters": [
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "rating_id",
+                        "in": "path",
+                        "description": "rating ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "rating",
+                        "in": "path",
+                        "description": "rating content",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "delete a rating",
+                "description": "delete the rating by rating id, survey id and peerGroup id",
+                "operationId": "ratings.destroy",
+                "parameters": [
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "rating_id",
+                        "in": "path",
+                        "description": "rating ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/api/peer-groups/{peerGroup_id}/surveys/": {
+            "get": {
+                "tags": [
+                    "Survey"
+                ],
+                "summary": "get the Survey group by peerGroup id",
+                "description": "Returns the Survey infomation as an array",
+                "operationId": "Survey.index",
+                "parameters": [
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User not exsits! / Success, User is detached from peer group / Error, User does not exsit in peer group"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Survey"
+                ],
+                "summary": "create a Survey",
+                "description": "create a new Survey by accepting peerGroup_id",
+                "operationId": "Survey.store",
+                "parameters": [
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/api/peer-groups/{peerGroup_id}/surveys/{survey_id}": {
+            "get": {
+                "tags": [
+                    "Survey"
+                ],
+                "summary": "show a Survey infomation",
+                "description": "show a new Survey by accepting peerGroup_id and survey_id",
+                "operationId": "Survey.show",
+                "parameters": [
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Survey"
+                ],
+                "summary": "update a Survey infomation",
+                "description": "update a new Survey by accepting peerGroup_id, survey_id and a new peer_group_id",
+                "operationId": "Survey.update",
+                "parameters": [
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "current peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "peer_group_id",
+                        "in": "path",
+                        "description": "updated peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
+                    },
+                    "500": {
+                        "description": "Invalid input"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Survey"
+                ],
+                "summary": "delete a Survey infomation",
+                "description": "delete a new Survey by accepting peerGroup_id, survey_id",
+                "operationId": "Survey.destroy",
+                "parameters": [
+                    {
+                        "name": "peerGroup_id",
+                        "in": "path",
+                        "description": "current peerGroup ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "survey_id",
+                        "in": "path",
+                        "description": "survey ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation"
                     },
                     "500": {
                         "description": "Invalid input"
